my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EVARPARAM_bug22466/T_EVARPARAM_bug22466-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EVARPARAM_BUG22466_STRUCT_H
#define T_EVARPARAM_BUG22466_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EVARPARAM_bug22466(void);


#endif /* not T_EVARPARAM_BUG22466_STRUCT_H */
